feat: add permanent game deletion
